gfx/layers/Layers.h
@@ -1409,6 +1409,8 @@ public:
     mManager->Mutated(this);
   }
 
+  virtual int32_t GetMaxLayerSize() { return Manager()->GetMaxTextureSize(); }
+
 protected:
   Layer(LayerManager* aManager, void* aImplData);
 
